# ai-job-market

./: 2025-06-13-NB-1-Descriptive-Analysis.ipynb  2025-06-16-NB-2-Diagnostic-Analysis.ipynb  README.md  pyproject.toml
data/: ai_job_dataset_united_states.csv
exports/s1-descriptive/: ai_salary_by_job_title.xlsx  ai_salary_detailed_summary.xlsx  company_size_matrix.csv  employment_type_analysis.csv  experience_salary_relationship.csv  industry_salary_analysis.csv  salary_by_job_title.csv  tableau_consolidated_data.csv
exports/s2-diagnostic/: df_with_skills_pivoted.csv  df_with_skills_pivoted.xlsx
